--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <meta name="viewboard" content=width="device-width initial-scale=1">
         <title>PizzaWorld</title>
         <link href="style/style.css" rel="stylesheet" type="text/stylesheet">
-        
+        <link href="style/bootstrap.css" rel="stylesheet" type="text/stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="java/java.js"></script>
     </head>
+    <body>
+        <h3 class="logo"><u>PIZZA_WORLD</u></h3>
+    </body>
 </html>
