--- a/index.html
+++ b/index.html
@@ -5,12 +5,55 @@
         <meta charset="utf-8">
         <meta name="viewboard" content=width="device-width initial-scale=1">
         <title>PizzaWorld</title>
-        <link href="style/style.css" rel="stylesheet" type="text/stylesheet">
-        <link href="style/bootstrap.css" rel="stylesheet" type="text/stylesheet">
+        <link href="style/style.css" rel="stylesheet">
+        <link href="style/bootstrap.css" rel="stylesheet" type="text/css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="java/java.js"></script>
     </head>
     <body>
-        <h3 class="logo"><u>PIZZA_WORLD</u></h3>
+        <div class="logo">
+        <h3>PIZZA_WORLD</h3>
+        <p>We,at pizza world,are determined to ensure that you have that<br> special moment with 
+            pizza and all added <br>assortments e.g soda,gingerbread etc </p>
+        </div>
+        <div class="menu">
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="images/neopolitan.jpg" width="300px" height="200px">
+                    <h5>Neopolitan_Pizza</h5>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/Sicilian-pizza.jpg" width="300px" height="200px">
+                    <h5>Sicilian_Pizza</h5>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/detroit-style-pizza-43-1500x1125.jpg" width="300px" height="200px">
+                    <h5>Detroit_Pizza</h5>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/chicago-thin-crust-pizza.jpg" width="300px" height="200px">
+                    <h5>Chicago_Pizza</h5>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/Greek_pizza.jpg" width="300px" height="200px">
+                    <h5>Greek_Pizza</h5>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/st_louis.jpg" width="300px" height="200px">
+                    <h5>St.Louis_Pizza</h5>
+                </div>
+                <div class="col-md-3">
+                    <img src="images/newyork.jpg" width="300px" height="200px">
+                    <h5>New york_Pizza</h5>
+                </div>
+                <div class="col-md-3">
+                    <h5>California_Pizza</h5>
+                </div>
+            </div>
+        </div>
+        <div class="finish">
+            <p>We are devoted to only be the best at serving you</p>
+            <h4>Pizza_World<br>2019</h4>
+        </div>
     </body>
 </html>
