--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             pizza and all added <br>assortments e.g soda,gingerbread etc </p>
         </div>
         <div class="menu">
+            <strong><h4><u>Menu</u></h4></strong>
             <div class="row">
                 <div class="col-md-3">
                     <img src="images/neopolitan.jpg" width="300px" height="200px">
@@ -47,6 +48,7 @@
                     <h5>New york_Pizza</h5>
                 </div>
                 <div class="col-md-3">
+                    <img src="images/california.jpg" width="300px" height="200px">
                     <h5>California_Pizza</h5>
                 </div>
             </div>
