--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewboard" content=width="device-width initial-scale=1">
-        <title>PizzaWorld</title>
+        <title>Pizza_World</title>
+        <link rel="icon" type="image/ico" href="images/pizza-430-763689.png">
         <link href="style/style.css" rel="stylesheet">
         <link href="style/bootstrap.css" rel="stylesheet" type="text/css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -15,8 +16,10 @@
         <h3>PIZZA_WORLD</h3>
         <p>We,at pizza world,are determined to ensure that you have that<br> special moment with 
             pizza and all added <br>assortments e.g soda,gingerbread etc </p>
+            <a href="#menu"><button>Checkout our Menu</button></a>
+            <br><br>
         </div>
-        <div class="menu">
+        <div id="menu">
             <strong><h4><u>Menu</u></h4></strong>
             <div class="row">
                 <div class="col-md-3">
