--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             <br><br><br>
             <form>
                 <input type="text" class="name" placeholder="Name..">Name
-                <input type="text" class="name" placeholder="07********">Number<br><br><br>
+                <input type="text" class="number" placeholder="07********">Number<br><br><br>
                 <input type="text" class="location" placeholder="Location..">Location
                 <input type="email" class="Email" placeholder="Name@gmail.com">Email Address
             </form>
             <br><br><br>
         </div>
         <div id="menu">
-            <strong><h4><u>Menu</u></h4></strong>
+            <strong><h4><u>Menu(Pliz click on one type)</u></h4></strong>
             <div class="row">
                 <div class="col-md-3">
                     <img src="images/neopolitan.jpg" width="300px" height="200px" class="Neo" >
