--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <br><br><br>
             <form>
                 <input type="text" class="name" placeholder=" Names..">Names
-                <input type="text" class="number" placeholder=" 07********">Number<br><br><br>
+                <input type="text" class="phone" placeholder=" 07********">Number<br><br><br>
                 <input type="text" class="location" placeholder="Location..">Location
                 <input type="email" class="Email" placeholder="Name@gmail.com">Email Address
                 <br><br>
@@ -52,6 +52,7 @@
                         <option value="BBQ">Chicken and BBQ sauce-Ksh.300</option>
                         <option value="Bacon">Bacon and pineapple-Ksh.300</option>
                         <option value="pineapple">Pineapple and black olives-Ksh.300</option>
+                        <option  value="Sausage">Sausage and Bacon-ksh.300</option>
                     </select>
                     <br><br>
                     Crust<select class="crust">
