--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <img src="images/neopolitan.jpg" width="300px" height="200px" class="Neo" >
                     <h5>Neopolitan_Pizza</h5>
                     <div class="details 1">
-                    Size<select class="size">
-                        <option value=""></option>
+                    Size<select id="size">
+                        <option value="1"></option>
                         <option value="small">Small-Ksh.500</option>
                         <option value="Medium">Medium-Ksh.800</option>
                         <option value="Large">Large-Ksh.1100</option>
