--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     <button type="submit" class="btn btn-secondary">Update</button>
                     <hr>
                     <h3>TOTAL</h3>
-                    <button class="btn btn-primary" onclick="usersdisplay()">Show Price</button>
+                    <button class="btn btn-primary" id="price_show">Show Price</button>
                     <p id="details"></p>
             </div>
             <hr>
