--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                         <option value="personal">Personal-delivery-Free</option>
                     </select>
                     <br><br>
-                    <button type="submit" class="btn btn-secondary">Update</button>
+                    <button type="submit" class="btn btn-secondary" id="update">Update</button>
                     <hr>
                     <h3>TOTAL</h3>
                     <button class="btn btn-primary" id="price_show">Show Price</button>
