--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@
             <hr>
             <div class="details">
              <form id="1">
+                Type<select id="type">
+                    <option value=""></option>
+                 <option value="Neopolitan_Pizza">Neopolitan_Pizza</option>
+                 <option value="Sicilian_Pizza">Sicilian_Pizza</option>
+                 <option value="Detroit_Pizza">Detroit_Pizza</option>
+                 <option value="Chicago_Pizza">Chicago_Pizza</option>
+                 <option value="Greek_Pizza">Greek_Pizza</option>
+                 <option value="St.Louis_Pizza">St.Louis_Pizza</option>
+                 <option value="New york_Pizza">New york_Pizza</option>
+                 <option value="California_Pizza">California_Pizza</option>
+                 </select>
+                 <br><br>
             Size<select id="size">
                 <option value="1"></option>
                 <option value="small">Small-Ksh.500</option>
