--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <input type="text" class="phone" placeholder=" 07********">Number<br><br><br>
                 <input type="email" class="Email" placeholder="Name@gmail.com">Email Address
                 <br><br>
-                <button type="submit" id="profile" class="btn btn-primary">Send</button>
+                <button type="button" id="profile" class="btn btn-primary">Send</button>
             </form>
             <br><br><br>
         </div>
@@ -113,7 +113,7 @@
             No.<input type="number" class="number">
             <br>
             <br><br>
-            <button type="submit" class="calc"">Calculate</button>
+            <button type="button" class="calc"">Calculate</button>
             </form>
             </div>
                     <div id="price">
