--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <br>
             <br><br>
             <button type="button" class="calc"">Calculate</button>
-            <p>Your choices on delivery are <em>hand delivered </em> or <em>proceed to<br> the restaurant </em>to receive itgi yourself,Thank you</p>
+            <p>Your choices on delivery are <em>hand delivered </em> or <em>proceed to<br> the restaurant </em>to receive it yourself,Thank you</p>
             </form>
             </div>
                     <div id="price">
