--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                  </select>
                  <br><br>
             Size<select id="size">
-                <option value="1"></option>
+                <option value=""></option>
                 <option value="small">Small-Ksh.500</option>
                 <option value="Medium">Medium-Ksh.800</option>
                 <option value="Large">Large-Ksh.1100</option>
