--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
             <br><br>
             Crust<select class="crust">
                 <option value=""></option>
-                <option value="GlutenFree">Gluten_Free</option>
-                <option value="Thick">Thick</option>
-                <option value="Crispy">Crispy</option>
-                <option value="stuffed">Stuffed</option>
-                <option value="Newhaven">New_Haven</option>
-                <option value="thin">Thin</option>
-                <option value="deep">Deep</option>
+                <option value="GlutenFree">Gluten_Free -ksh.300</option>
+                <option value="Thick">Thick  -ksh.300</option>
+                <option value="Crispy">Crispy -ksh.300</option>
+                <option value="stuffed">Stuffed -ksh.300</option>
+                <option value="Newhaven">New_Haven -ksh.300</option>
+                <option value="thin">Thin -ksh.300</option>
+                <option value="deep">Deep -ksh.300</option>
             </select>
             <br><br>
             No.<input type="number" class="number">
